--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <!-- <script src="https://cdn.bootcdn.net/ajax/libs/echarts/4.1.0/echarts.min.js"></script> -->
     <!-- <script src="https://cdn.bootcdn.net/ajax/libs/vue-echarts/4.0.2/vue-echarts.min.js"></script> -->
-    <script src="/site/ckeditor.js"></script>
+    <script src="/site/site/ckeditor.js"></script>
     <script>
       if ( window.CKEDITOR && ( !CKEDITOR.env.ie || CKEDITOR.env.version > 7 ) )
     CKEDITOR.env.isCompatible = true;
